--- a/mobile/app/src/main/res/values/colors.xml
+++ b/mobile/app/src/main/res/values/colors.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
     <color name="yellow">#F8B500</color>
     <color name="light_gray">#F7F7F7</color>
     <color name="dark_gray">#444444</color>
     <color name="gray">#606060</color>
     <color name="gray_2">#494949</color>
+    <color name="shadow">#000000</color>
 </resources>
