--- a/mobile/app/src/main/res/layout/fragment_login.xml
+++ b/mobile/app/src/main/res/layout/fragment_login.xml
@@ -105,7 +105,7 @@
         app:layout_constraintTop_toBottomOf="@+id/password_edit" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/log_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="21dp"
@@ -134,7 +134,7 @@
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sign_up_label"
        app:layout_constraintStart_toStartOf="parent"
-       app:layout_constraintTop_toBottomOf="@+id/button" />
+       app:layout_constraintTop_toBottomOf="@+id/log_btn" />
 
     <TextView
         android:id="@+id/sign_up_label"
@@ -148,6 +148,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/no_account_label"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/log_btn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
