--- a/mobile/app/src/main/res/layout/fragment_login.xml
+++ b/mobile/app/src/main/res/layout/fragment_login.xml
@@ -4,18 +4,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/background">
 
     <View
         android:id="@+id/vector"
         android:layout_width="156dp"
         android:layout_height="15dp"
-        android:layout_marginTop="131dp"
+        android:layout_marginTop="56dp"
         android:background="@drawable/vector_1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.756"
+        app:layout_constraintHorizontal_bias="0.749"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/log_label" />
 
     <TextView
         android:id="@+id/log_label"
@@ -99,7 +100,8 @@
         android:text="@string/forget_pass_baner_text"
         android:textAppearance="@style/label"
         android:textSize="18sp"
-        android:textColor="@color/yellow"
+        android:textColor="@drawable/text_button"
+        android:clickable="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password_edit" />
@@ -113,9 +115,9 @@
         android:layout_marginEnd="21dp"
         android:paddingBottom="6dp"
         android:text="@string/log_button"
-        android:textAppearance="@style/button_style"
-        android:textColor="@color/light_gray"
         app:backgroundTint="@null"
+        android:textColor="@color/light_gray"
+        android:textAppearance="@style/button_style"
         android:background="@drawable/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -143,7 +145,8 @@
         android:layout_marginEnd="65dp"
         android:text="@string/sign_up_text"
         android:textAppearance="@style/label"
-        android:textColor="@color/yellow"
+        android:textColor="@drawable/text_button"
+        android:clickable="true"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
