--- a/mobile/app/src/main/res/layout/registration_activity.xml
+++ b/mobile/app/src/main/res/layout/registration_activity.xml
@@ -22,12 +22,12 @@
             android:id="@+id/vector"
             android:layout_width="156dp"
             android:layout_height="15dp"
-            android:layout_marginTop="112dp"
+            android:layout_marginTop="58dp"
             android:background="@drawable/vector_1"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.788"
+            app:layout_constraintHorizontal_bias="0.858"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@+id/sign_up_label" />
 
         <TextView
             android:id="@+id/sign_up_label"
@@ -151,51 +151,18 @@
             android:id="@+id/password_confirm_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
             android:layout_marginStart="21dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="21dp"
-            android:padding="8dp"
             android:background="@drawable/edittext"
+            android:importantForAutofill="no"
+            android:inputType="textPassword"
+            android:padding="8dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/password_confirm_label"
-            android:importantForAutofill="no"
             tools:ignore="LabelFor" />
-
-        <TextView
-            android:id="@+id/choose_image_label"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="36dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="36dp"
-            android:text="@string/choose_image_text"
-            android:textAppearance="@style/label"
-            android:textSize="24sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/password_confirm_edit" />
-
-        <Button
-            android:id="@+id/image_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="21dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="21dp"
-            android:paddingStart="50dp"
-            android:paddingBottom="6dp"
-            android:text="@string/browse_text"
-            android:textAppearance="@style/button_style"
-            android:textColor="@color/gray"
-            android:background="@drawable/button_image"
-            app:backgroundTint="@null"
-            android:textAllCaps="false"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/choose_image_label"
-            tools:ignore="RtlSymmetry" />
 
         <TextView
             android:id="@+id/info"
@@ -205,12 +172,12 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="36dp"
             android:text="@string/info_text"
+            android:textAlignment="center"
             android:textAppearance="@style/info_label"
             android:textSize="18sp"
-            android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/image_button" />
+            app:layout_constraintTop_toBottomOf="@+id/password_confirm_edit" />
 
         <LinearLayout
             android:id="@+id/reg_l"
@@ -239,7 +206,8 @@
                 android:paddingStart="35dp"
                 android:text="@string/reg_text_r"
                 android:textAppearance="@style/info_label"
-                android:textColor="@color/yellow"
+                android:textColor="@drawable/text_button"
+                android:clickable="true"
                 android:textSize="16sp"
                 tools:ignore="RtlSymmetry" />
         </LinearLayout>
