--- a/mobile/app/src/main/res/values/colors.xml
+++ b/mobile/app/src/main/res/values/colors.xml
@@ -5,5 +5,7 @@
     <color name="dark_gray">#444444</color>
     <color name="gray">#606060</color>
     <color name="gray_2">#494949</color>
-    <color name="shadow">#000000</color>
+    <color name="shadow">#303030</color>
+    <color name="orange">#FF7D19</color>
+    <color name="dark_orange">#F85A20</color>
 </resources>
