--- a/mobile/app/src/main/res/values/styles.xml
+++ b/mobile/app/src/main/res/values/styles.xml
@@ -20,9 +20,9 @@
         <item name="android:textSize">30sp</item>
         <item name="android:shadowColor">@color/shadow</item>
         <item name="android:shadowDx">0</item>
-        <item name="android:shadowDy">4</item>
+        <item name="android:shadowDy">3</item>
         <item name="android:shadowRadius">4</item>
-        <item name="background">@drawable/button</item>
+        <item name="background">@drawable/button_normal</item>
         <item name="backgroundTint">@null</item>
     </style>
 
