--- a/mobile/app/src/main/res/layout/fragment_home.xml
+++ b/mobile/app/src/main/res/layout/fragment_home.xml
@@ -4,4 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="Zalogowano"
+        ></TextView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
