--- a/mobile/app/src/main/res/layout/item_wallet.xml
+++ b/mobile/app/src/main/res/layout/item_wallet.xml
@@ -1,30 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="40dp"
     android:orientation="vertical"
     android:gravity="center"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/dark_gray"
-    >
-
+    android:background="@color/dark_gray">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/walletName_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="@style/label"
             android:textSize="36sp"
-            android:textColor="@color/yellow"
-            android:text="TextView" />
+            android:text=" "
+            android:textColor="@color/yellow" />
 
         <View
-            android:id="@+id/view"
+            android:id="@+id/vector"
             android:layout_width="match_parent"
             android:layout_height="10dp"
-            android:layout_marginHorizontal="30dp"
             android:layout_marginBottom="20dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/vector_2" />
@@ -37,22 +33,22 @@
             android:gravity="center">
 
             <TextView
-                android:id="@+id/textView6"
+                android:id="@+id/owner_l"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textAppearance="@style/label"
                 android:textSize="24sp"
-                android:text="Właściciel: " />
+                android:text="@string/owner" />
 
             <TextView
-                android:id="@+id/textView7"
+                android:id="@+id/owner_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:text=" "
                 android:textAppearance="@style/label"
-                android:textSize="24sp"
-                android:text="TextView" />
+                android:textSize="24sp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -63,22 +59,22 @@
             android:gravity="center">
 
             <TextView
-                android:id="@+id/textView9"
+                android:id="@+id/number_of_members_l"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textAppearance="@style/label"
                 android:textSize="24sp"
-                android:text="Liczba członków: " />
+                android:text="@string/number_of_members" />
 
             <TextView
-                android:id="@+id/textView8"
+                android:id="@+id/number_of_members_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:text=" "
                 android:textAppearance="@style/label"
-                android:textSize="24sp"
-                android:text="TextView" />
+                android:textSize="24sp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -89,30 +85,30 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView11"
+                android:id="@+id/balance_l"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/label"
                 android:textSize="24sp"
                 android:layout_weight="1"
-                android:text="Saldo: " />
+                android:text="@string/balance" />
 
             <TextView
-                android:id="@+id/textView10"
+                android:id="@+id/balance_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/label"
                 android:textSize="24sp"
-                android:layout_weight="1"
-                android:text="TextView" />
+                android:text=" "
+                android:layout_weight="1"/>
         </LinearLayout>
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/goToWallet_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/button"
-            android:text="Przejdź do porfela"
+            android:text="@string/go_to_wallet"
             android:textAppearance="@style/button_style"
             android:textColor="@color/light_gray"
             app:backgroundTint="@null" />
