--- a/mobile/app/src/main/res/layout/activity_main.xml
+++ b/mobile/app/src/main/res/layout/activity_main.xml
@@ -3,8 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:layout_editor_absoluteX="20dp"
-    tools:layout_editor_absoluteY="731dp"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
@@ -15,29 +13,52 @@
         android:gravity="center"
         android:background="@drawable/background">
 
-        <Button
-            android:id="@+id/logout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/button"
-            android:text="@string/logout"
-            android:textAppearance="@style/button_style"
-            android:textColor="@color/light_gray"
-            app:backgroundTint="@null" />
-
-        <TextView
-            android:id="@+id/login_tv"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="@style/info_label" />
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/hello_label"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="@string/hello"
+                android:textAppearance="@style/label"
+                android:textSize="40sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                tools:layout_editor_absoluteY="0dp" />
+
+            <View
+                android:id="@+id/vector"
+                android:layout_width="156dp"
+                android:layout_height="15dp"
+                android:layout_marginTop="43dp"
+                android:background="@drawable/vector_1"
+                android:layout_marginStart="200dp"
+                app:layout_constraintStart_toStartOf="@+id/hello_label"
+                app:layout_constraintTop_toTopOf="@+id/hello_label" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/wallet_rv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="20dp"
+            android:layout_marginHorizontal="10dp"
             tools:listitem="@layout/item_wallet">
         </androidx.recyclerview.widget.RecyclerView>
+
+        <Button
+            android:id="@+id/create_wallet_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button"
+            android:layout_marginBottom="20dp"
+            android:text="@string/new_wallet"
+            android:textAppearance="@style/button_style"
+            android:textColor="@color/light_gray"
+            app:backgroundTint="@null" />
+
     </LinearLayout>
 </ScrollView>
 
