--- a/mobile/app/src/main/res/layout/item_wallet.xml
+++ b/mobile/app/src/main/res/layout/item_wallet.xml
@@ -3,10 +3,11 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="40dp"
+    android:layout_margin="20dp"
     android:orientation="vertical"
     android:gravity="center"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/dark_gray">
+    android:background="@drawable/round_box">
 
         <TextView
             android:id="@+id/walletName_tv"
@@ -28,79 +29,37 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_marginBottom="20dp"
             android:gravity="center">
-
-            <TextView
-                android:id="@+id/owner_l"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textAppearance="@style/label"
-                android:textSize="24sp"
-                android:text="@string/owner" />
 
             <TextView
                 android:id="@+id/owner_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text=" "
                 android:textAppearance="@style/label"
-                android:textSize="24sp"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="20dp"
-            android:gravity="center">
-
-            <TextView
-                android:id="@+id/number_of_members_l"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textAppearance="@style/label"
-                android:textSize="24sp"
-                android:text="@string/number_of_members" />
+                android:textSize="20sp"
+                android:text="@string/owner" />
 
             <TextView
                 android:id="@+id/number_of_members_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text=" "
                 android:textAppearance="@style/label"
-                android:textSize="24sp"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/balance_l"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/label"
-                android:textSize="24sp"
-                android:layout_weight="1"
-                android:text="@string/balance" />
+                android:textSize="20sp"
+                android:text="@string/number_of_members" />
 
             <TextView
                 android:id="@+id/balance_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/label"
-                android:textSize="24sp"
-                android:text=" "
-                android:layout_weight="1"/>
+                android:textSize="20sp"
+                android:layout_weight="1"
+                android:text="@string/balance" />
+
         </LinearLayout>
 
         <Button
