--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,12 +7,6 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -28,11 +22,42 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.navbar-brand{
+  font-family: PT Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 30px;
+  margin-left: 30px;
+ 
+  background:
+  -webkit-linear-gradient(#F8B500, #FF3D3D);
+  -webkit-background-clip: text;
+          background-clip:text;
+  -webkit-text-fill-color: transparent;
+  
+}
+
+.nav-item{
+  
+  font-family: PT Sans;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+ 
+  
+  
+  
+}
+
+#idtitle{
+ margin-top: 20px;
+ 
+font-family: PT Sans;
+font-style: normal;
+font-weight: bold;
+font-size: 96px;
+line-height: 107.4%;
+letter-spacing: 0.04em;
+
 }
