--- a/mobile/app/src/main/res/layout/activity_login.xml
+++ b/mobile/app/src/main/res/layout/activity_login.xml
@@ -111,7 +111,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="21dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="21dp"
         android:paddingBottom="6dp"
         android:text="@string/log_button"
@@ -125,32 +125,34 @@
         app:layout_constraintTop_toBottomOf="@+id/forget_pass_baner_label" />
 
     <TextView
-       android:id="@+id/no_account_label"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_marginStart="65dp"
-       android:text="@string/no_accout_text"
-       android:textAppearance="@style/label"
-       android:textColor="@color/light_gray"
-       android:textSize="18sp"
-       app:layout_constraintBottom_toBottomOf="parent"
-       app:layout_constraintEnd_toStartOf="@+id/sign_up_label"
-       app:layout_constraintStart_toStartOf="parent"
-       app:layout_constraintTop_toBottomOf="@+id/log_btn" />
+        android:id="@+id/no_account_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="65dp"
+        android:text="@string/no_accout_text"
+        android:textAppearance="@style/label"
+        android:textColor="@color/light_gray"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/sign_up_label"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/log_btn"
+        app:layout_constraintVertical_bias="0.275" />
 
     <TextView
         android:id="@+id/sign_up_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="65dp"
+        android:clickable="true"
         android:text="@string/sign_up_text"
         android:textAppearance="@style/label"
         android:textColor="@drawable/text_button"
-        android:clickable="true"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/no_account_label"
-        app:layout_constraintTop_toBottomOf="@+id/log_btn" />
+        app:layout_constraintTop_toBottomOf="@+id/log_btn"
+        app:layout_constraintVertical_bias="0.275" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
