--- a/mobile/app/src/main/res/layout/activity_wallet.xml
+++ b/mobile/app/src/main/res/layout/activity_wallet.xml
@@ -1,9 +1,171 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WalletActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:background="@drawable/background">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/hello_label"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="@string/hello"
+                android:textAppearance="@style/label"
+                android:textSize="40sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                tools:layout_editor_absoluteY="0dp" />
+
+            <View
+                android:id="@+id/vector"
+                android:layout_width="156dp"
+                android:layout_height="15dp"
+                android:layout_marginTop="43dp"
+                android:background="@drawable/vector_1"
+                android:layout_marginStart="200dp"
+                app:layout_constraintStart_toStartOf="@+id/hello_label"
+                app:layout_constraintTop_toTopOf="@+id/hello_label" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="40dp"
+            android:layout_margin="20dp"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:background="@drawable/round_box">
+
+            <TextView
+                android:id="@+id/walletName_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/label"
+                android:textSize="36sp"
+                android:text=" "
+                android:textColor="@color/yellow" />
+
+            <View
+                android:id="@+id/vector_1"
+                android:layout_width="match_parent"
+                android:layout_height="10dp"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/vector_2" />
+
+            <TextView
+                android:id="@+id/description_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textAppearance="@style/label"
+                android:textSize="20sp"
+                android:text="@string/description" />
+
+            <View
+                android:id="@+id/vector_2"
+                android:layout_width="match_parent"
+                android:layout_height="10dp"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/vector_2" />
+
+            <TextView
+                android:id="@+id/owner_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textAppearance="@style/label"
+                android:textSize="20sp"
+                android:text="@string/owner" />
+
+            <TextView
+                android:id="@+id/number_of_members_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textAppearance="@style/label"
+                android:textSize="20sp"
+                android:text="@string/number_of_members" />
+
+            <TextView
+                android:id="@+id/saldo_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="40dp"
+                android:textAppearance="@style/label"
+                android:textSize="20sp"
+                android:layout_weight="1"
+                android:text="@string/saldo" />
+
+            <TextView
+                android:id="@+id/expanses_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/label"
+                android:textSize="20sp"
+                android:layout_weight="1"
+                android:text="@string/expanses" />
+
+            <TextView
+                android:id="@+id/your_expanses_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/label"
+                android:textSize="20sp"
+                android:layout_weight="1"
+                android:text="@string/your_expanses" />
+
+            <TextView
+                android:id="@+id/balance_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/label"
+                android:textSize="20sp"
+                android:layout_weight="1"
+                android:text="@string/balance" />
+
+            <View
+                android:id="@+id/vector_3"
+                android:layout_width="match_parent"
+                android:layout_height="10dp"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/vector_2" />
+
+            <Button
+                android:id="@+id/statistics_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/button"
+                android:text="@string/statistics"
+                android:textAppearance="@style/button_style"
+                android:textColor="@color/light_gray"
+                app:backgroundTint="@null" />
+
+            <Button
+                android:id="@+id/deleteWallet_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/button_danger"
+                android:text="@string/deleteWallet"
+                android:textAppearance="@style/button_style"
+                android:textColor="@color/light_gray"
+                app:backgroundTint="@null" />
+
+            </LinearLayout>
+        </LinearLayout>
+</ScrollView>
