--- a/mobile/app/src/main/res/layout/item_member.xml
+++ b/mobile/app/src/main/res/layout/item_member.xml
@@ -2,16 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/gray"
     android:orientation="horizontal"
-    android:gravity="center">
+    android:gravity="center"
+    android:background="@drawable/round_box_button">
     <TextView
         android:id="@+id/member_name"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:textAppearance="@style/info_label"
-        android:textSize="24sp"
-        android:text="balba"
+        android:textSize="18sp"
         android:layout_marginHorizontal="20dp">
     </TextView>
     <TextView
@@ -19,8 +18,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:textAppearance="@style/info_label"
-        android:textSize="24sp"
-        android:text="balba"
+        android:textSize="18sp"
+        android:text="20zl"
         android:layout_marginHorizontal="20dp">
     </TextView>
 </LinearLayout>
