--- a/mobile/app/src/main/res/layout/fragment_members.xml
+++ b/mobile/app/src/main/res/layout/fragment_members.xml
@@ -4,14 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:context=".MembersFragment"
-    android:gravity="center">
+    android:gravity="center"
+    android:layout_marginBottom="20dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center"
-        android:padding="20dp"
+        android:padding="10dp"
         android:background="@drawable/round_box_button">
 
         <androidx.recyclerview.widget.RecyclerView
@@ -33,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Edytuj listę członków"
-            android:textSize="24sp"
+            android:textSize="18sp"
             android:textAppearance="@style/button_style" />
     </LinearLayout>
 
