--- a/frontend/src/components/components.css
+++ b/frontend/src/components/components.css
@@ -18,3 +18,14 @@ font-size: 5vw;
     width: 100%;
     background-color: #484848;
 }
+
+@media only screen and (max-width: 415px){
+    .footer{
+        position:absolute;
+        bottom: 0;
+        font-size: 3vw;
+        color: #F7F7F7;
+        width: 100%;
+        background-color: #484848;
+    }
+  }
