--- a/mobile/app/src/main/res/layout/activity_create_wallet.xml
+++ b/mobile/app/src/main/res/layout/activity_create_wallet.xml
@@ -2,6 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/background">
     <LinearLayout
         android:layout_width="match_parent"
@@ -57,10 +58,14 @@
             android:textColor="@color/light_gray"
             android:drawableRight="@drawable/search_icon"/>
 
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/fragment_container_view_search"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/members_search_rv"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+
+            tools:listitem="@layout/item_user_search"
+            android:padding="10dp"
+            android:layout_marginBottom="20dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -89,6 +94,7 @@
         </LinearLayout>
 
         <Button
+            android:id="@+id/create_wallet_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/button"
