Reformat button in item_user_search

--- a/mobile/app/src/main/res/values/colors.xml
+++ b/mobile/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="dark_orange">#F85A20</color>
     <color name="red">#E80E0E</color>
     <color name="light_red">#ED430A</color>
+    <color name="green">#41C236</color>
 </resources>
