--- a/mobile/app/src/main/res/layout/registration_activity.xml
+++ b/mobile/app/src/main/res/layout/registration_activity.xml
@@ -6,8 +6,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
-    tools:context=".RegistrationActivity">
+    android:background="@drawable/bg_background"
+    tools:context=".activity.RegistrationActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl"
@@ -23,7 +23,7 @@
             android:layout_width="156dp"
             android:layout_height="15dp"
             android:layout_marginTop="58dp"
-            android:background="@drawable/vector_1"
+            android:background="@drawable/v_underline"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.858"
             app:layout_constraintStart_toStartOf="parent"
@@ -66,7 +66,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="21dp"
             android:padding="8dp"
-            android:background="@drawable/edittext"
+            android:background="@drawable/et_edittext"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/login_label"
@@ -96,7 +96,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="21dp"
             android:padding="8dp"
-            android:background="@drawable/edittext"
+            android:background="@drawable/et_edittext"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/email_label"
@@ -126,7 +126,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="21dp"
             android:padding="8dp"
-            android:background="@drawable/edittext"
+            android:background="@drawable/et_edittext"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/password_label"
@@ -154,7 +154,7 @@
             android:layout_marginStart="21dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="21dp"
-            android:background="@drawable/edittext"
+            android:background="@drawable/et_edittext"
             android:importantForAutofill="no"
             android:inputType="textPassword"
             android:padding="8dp"
@@ -206,7 +206,7 @@
                 android:paddingStart="35dp"
                 android:text="@string/reg_text_r"
                 android:textAppearance="@style/info_label"
-                android:textColor="@drawable/text_button"
+                android:textColor="@drawable/btn_text"
                 android:clickable="true"
                 android:textSize="16sp"
                 tools:ignore="RtlSymmetry" />
@@ -225,7 +225,7 @@
             android:textAppearance="@style/button_style"
             android:textColor="@color/light_gray"
             app:backgroundTint="@null"
-            android:background="@drawable/button"
+            android:background="@drawable/btn_simple"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
