--- a/mobile/app/src/main/res/layout/activity_main.xml
+++ b/mobile/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center"
-        android:background="@drawable/background">
+        android:background="@drawable/bg_background">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -33,7 +33,7 @@
                 android:layout_width="156dp"
                 android:layout_height="15dp"
                 android:layout_marginTop="43dp"
-                android:background="@drawable/vector_1"
+                android:background="@drawable/v_underline"
                 android:layout_marginStart="200dp"
                 app:layout_constraintStart_toStartOf="@+id/hello_label"
                 app:layout_constraintTop_toTopOf="@+id/hello_label" />
@@ -52,7 +52,7 @@
             android:id="@+id/go_to_create_wallet_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/button"
+            android:background="@drawable/btn_simple"
             android:layout_marginBottom="20dp"
             android:text="@string/new_wallet"
             android:textAppearance="@style/button_style"
