--- a/mobile/app/src/main/res/layout/item_user_search.xml
+++ b/mobile/app/src/main/res/layout/item_user_search.xml
@@ -4,10 +4,11 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:gravity="center"
-    android:background="@drawable/round_box">
+    android:background="@drawable/bg_round_box_dark"
+    android:layout_marginVertical="5dp">
     <TextView
         android:id="@+id/member_name"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="match_parent"
         android:textAppearance="@style/info_label"
         android:textSize="18sp"
@@ -18,6 +19,7 @@
         android:id="@+id/add_user_btn"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:background="@drawable/add_person" />
+        android:layout_marginHorizontal="20dp"
+        android:background="@drawable/btn_add_person" />
 
 </LinearLayout>
