--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,8 +4,15 @@
   position: relative;
   background-image:url(background_image.png);
   height: 100%;
+  overflow: auto;
   
 }
+#content{
+  padding-bottom: 80px;
+  overflow: auto;
+  height: 100%;
+}
+
 .navbarBrand{
   font-family: PT Sans;
   font-style: normal;
@@ -28,8 +35,8 @@
  margin-right: 2%;
  flex-wrap: wrap;
 }
+
 .nav-item{
-  
   font-family: PT Sans;
   font-style: normal;
   font-weight: normal;
@@ -40,30 +47,28 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-
   padding: 2px 17px;
   position: static;
- 
-
   left: calc(50% - 174px/2 - 116px);
   top: calc(50% - 65px/2);
   margin-top: 6px;
-
-  
   background: linear-gradient(284.77deg, #F8B500 32.81%, #F80000 189.19%);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
   border-radius: 24px;
   border-color: transparent;
   font-size: 20px !important;
 }
+
 #mainbuttonstyle:hover{
   background: linear-gradient(284.77deg, #F8B100 32.81%, #F8B500 189.19%);
  }
+
 .grid-container{
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 20px;
 }
+
 #vector-image{
   background-image: url(headervector.svg);
   background-size: contain;
@@ -76,57 +81,299 @@
   background-image: url(logo.svg);
   background-size: contain;
   background-repeat: no-repeat;
-  height: 25vw;
-  width: 25vw;
-  margin-top:-30vh;
-  margin-left:20vw;
+  height: 500px;
+  width: 500px;
+  margin-top:-40%;
+  margin-left:40%;
+  overflow: hidden;
 }
 
-@media only screen and (max-width: 1025px){
-  #piggy-image{
-    background-image: url(logo.svg);
-    background-size: contain;
-    background-repeat: no-repeat;
-    height: 35vw;
-    width: 35vw;
-    margin-top:20vh;
-    margin-left:20vw;
-  }
+input[type='text'], input[type='password']{
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+  border-radius: 24px;
+  border-color: transparent;
 }
 
-
-@media only screen and (max-width: 415px){
-  #mainbuttonstyle{
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+.login-container{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: transparent;
+  background-clip: border-box;
+  font-family: PT Sans;
+  color: #F7F7F7;
+  font-size: 1.2vw;
+  padding-top:5%;
+  padding-left: 20%;
+  padding-right: 20%;
+  width: 100%;
   
+  
+}
+
+.form-label{
+  padding-top: 1%;
+  padding-bottom: 1%;
+  font-family: PT Sans;
+}
+
+.href-text{
+  color:#F8B500;
+  text-align: left;
+  text-decoration: none;
+  font-size: 1,5vw;
+}
+.href-text:hover{
+  color:#e4850a;
+}
+
+.form-button{
+  width: 100%;
+  display: block;
+  height: auto;
+  
+  
+}
+.center-content{
+  text-align: center;
+  padding-top: 3%;
+  box-sizing: border-box;
+
+}
+
+@media all and (max-width: 1750px){ 
+
+  .navbar-nav{
+   
+    margin-left: 37%;
+    margin-right: 2%;
+    
+   }
+  #mainbuttonstyle{
     padding: 2px 10px;
     position: static;
-   
-  
-    left: calc(50% - 174px/2 - 116px);
-    top: calc(50% - 65px/2);
-    margin-top: 6px;
-  
-    
-    background: linear-gradient(284.77deg, #F8B500 32.81%, #F80000 189.19%);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
     border-radius: 24px;
-    border-color: transparent;
-    font-size: 4vw !important;
+    font-size: 30px !important;
+  }
+   .nav-item{  
+     font-size: 30px !important;
+   }
+
+   .navbarBrand{
+    font-size: 40px; 
   }
 
+  #piggy-image{
+    height: 20vw;
+    width: 20vw;
+    margin-top:-40%;
+    margin-left:40%;
+    
+  }
 
-   .nav-item{
-     
+  #vector-image{
+    height: 10%;
+    width: 50%;
+    margin-top: -7px;
+  }
+  .href-text{
+    font-size: 2vw;
+}
+.login-container{
+    font-size: 2vw;
+}
+}
+@media all and (max-width: 1025px){ 
+
+  .navbar-nav{
+   
+    margin-left: 35%;
+    margin-right: 2%;
+    
+   }
+  #mainbuttonstyle{
+    padding: 2px 10px;
+    position: static;
+    border-radius: 24px;
+    font-size: 30px !important;
+  }
+   .nav-item{  
+     font-size: 30px !important;
+   }
+
+   .navbarBrand{
+    font-size: 40px; 
+  }
+
+  #piggy-image{
+    height: 25vw;
+    width: 25vw;
+    margin-top:-20%;
+    margin-left:30%;
+    
+  }
+
+  #vector-image{
+    height: 10%;
+    width: 50%;
+    margin-top: -7px;
+  }
+
+  .href-text{
+    font-size: 3vw;
+  }
+  .login-container{
+      font-size: 3vw;
+  }
+  .form-label{
+    padding-top: 1%;
+    padding-bottom: 1%;
+    font-family: PT Sans;
+  }
+
+}
+
+@media all and (max-width: 769px){
+  .navbar-nav{
+    margin-left: 28%;
+    margin-right: 2%;
+  }
+
+  #mainbuttonstyle{
+    padding: 2px 10px;
+    position: static;
+    border-radius: 24px;
+    font-size: 3vw !important;
+  }
+   .nav-item{  
+     font-size: 3vw !important;
+   }
+
+   .navbarBrand{
+    font-size: 3vw; 
+  }
+
+  #piggy-image{
+    height: 35vw;
+    width: 35vw;
+    margin-top:-15%;
+    margin-left:10%;
+    overflow: hidden;
+  }
+  #vector-image{
+    height: 10%;
+    width: 50%;
+    margin-top: -7px;
+  }
+  .href-text{
+    font-size: 3vw;
+  }
+  .login-container{
+      font-size: 3vw;
+  }
+  .form-label{
+    padding-top: 1%;
+    padding-bottom: 1%;
+    font-family: PT Sans;
+  }
+  
+}
+
+@media all and (max-width: 415px){
+  .navbar-nav{
+    margin-left: 12%;
+    margin-right: 2%;
+  }
+  #mainbuttonstyle{
+    padding: 2px 10px;
+    position: static;
+    border-radius: 24px;
+    font-size: 4vw !important;
+  }
+   .nav-item{  
      font-size: 4vw !important;
    }
 
    .navbarBrand{
-    
-    font-size: 6vw;
+    font-size: 4vw;
+  }
+
+  #piggy-image{
+    height: 35vw;
+    width: 35vw;
+    margin-left:20%;
    
+  }
+  #vector-image{
+    height: 3vw;
+    width: 30vw;
+    margin-top: -7px;
+  }
+
+  .href-text{
+    font-size: 3vw;
+  }
+  .login-container{
+      font-size: 3vw;
+  }
+
+  .form-label{
+    padding-top: 1%;
+    padding-bottom: 1%;
+    font-family: PT Sans;
+  }
+  
+}
+@media all and (max-width: 281px){
+  .navbar-nav{
+    margin-left: 8%;
+    margin-right: 1%;
+  }
+  #mainbuttonstyle{
+    padding: 2px 10px;
+    position: static;
+    border-radius: 24px;
+    font-size: 4,5vw !important;
+  }
+   .nav-item{  
+     font-size: 4,5vw !important;
+   }
+
+   .navbarBrand{
+    font-size: 5vw;
+  }
+
+  #piggy-image{
+    height: 35vw;
+    width: 35vw;
+    margin-left:20%;
+   
+  }
+  #vector-image{
+    height: 3vw;
+    width: 30vw;
+    margin-top: -7px;
+  }
+
+  .href-text{
+    font-size: 4vw;
+  }
+  .login-container{
+      font-size: 4vw;
+  }
+
+  .form-label{
+    padding-top: 1%;
+    padding-bottom: 1%;
+    font-family: PT Sans;
     
   }
+  
 }
+
+
+
+
+
