--- a/mobile/app/src/main/res/layout/activity_main.xml
+++ b/mobile/app/src/main/res/layout/activity_main.xml
@@ -13,32 +13,16 @@
         android:gravity="center"
         android:background="@drawable/bg_background">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/hello_label"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="@string/hello"
-                android:textAppearance="@style/label"
-                android:textSize="40sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                tools:layout_editor_absoluteY="0dp" />
-
-            <View
-                android:id="@+id/vector"
-                android:layout_width="156dp"
-                android:layout_height="15dp"
-                android:layout_marginTop="43dp"
-                android:background="@drawable/v_underline"
-                android:layout_marginStart="200dp"
-                app:layout_constraintStart_toStartOf="@+id/hello_label"
-                app:layout_constraintTop_toTopOf="@+id/hello_label" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/hello_label"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="@string/hello"
+            android:textAppearance="@style/label"
+            android:textSize="40sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="0dp" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/wallet_rv"
@@ -53,7 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/btn_simple"
-            android:layout_marginBottom="20dp"
+            android:layout_marginVertical="20dp"
             android:text="@string/new_wallet"
             android:textAppearance="@style/button_style"
             android:textColor="@color/light_gray"
